--- a/locales/Contact/tr.json
+++ b/locales/Contact/tr.json
@@ -4,5 +4,7 @@
   "3": "E-postanız",
   "4": "Konu",
   "5": "Mesajınız",
-  "6": "Gönder"
+  "6": "Gönder",
+  "7": "Mesaj gönderildi",
+  "8": "E-postayı gönderirken hata oluştu"
 }
