--- a/locales/Header/Navigation/tr.json
+++ b/locales/Header/Navigation/tr.json
@@ -2,7 +2,7 @@
   "1": "Konsept",
   "2": "Avatarlar",
   "3": "Platform",
-  "4": "Plan",
+  "4": "Planlar",
   "5": "Göz at",
-  "6": "Contact"
+  "6": "İletişim"
 }
