--- a/locales/Project/tr.json
+++ b/locales/Project/tr.json
@@ -2,18 +2,18 @@
   "0": "Platform",
   "1": "1. Sipariş ver",
   "2": "Anneler, kedileri doyurmak için sipariş verirler.",
-  "3": "Yemek türünü, miktarını ve bu mamaları sokak, sahiplenilen, veya tüm kedilere verilip verilmeyeceğine karar verirler.",
+  "3": "Mama türünü, miktarını ve bu mamaları hangi kedilere, sokak, sahiplenilen, veya tümüne, verileceğine dair karar verirler.",
   "4": "2. Mamayı dağıt",
-  "5": "Ablalar, annelerin sipariş ettiği mamaları onların adından kedilere verirler. Her doyurma süreci kaydedilir ve kalite kontrolü için platforma yüklenilir.",
+  "5": "Ablalar, annelerin sipariş ettiği mamaları onların adından kedilere verirler. Doyurma süreçlerini kaydederler ve kalite kontrolü için platforma yüklerler.",
   "6": "Kontrol olumlu sonuçlanırsa ablaya annenin siparişinden ödeme yapılır, aksi takdirde ablanın doyurmayı tekrar yapması gerekir.",
   "7": "3. Kalite kontrolü",
   "8": "Purrma, her doyurma işlemini birçok kriterlere göre kontrol eder.",
-  "9": "Bunlar arasında servis edilen mama miktarı, kedilere yemek için verilen süre, konum kanıtı, doyurma işlemini gösteren video, ve bunlar gibi diğer performans ve kalite kıstasları.",
+  "9": "Bunlar arasında servis edilen mama miktarı, kedilere yemek için verilen süre, kedinin yemesine engel olabilecek faktörlerin olup olmaması, konum kanıtı, doyurma işlemini gösteren video, ve bunlar gibi diğer performans ve kalite kıstasları.",
   "10": "4. Kazançları çek",
   "11": "Her abla, her başarılı doyurma için ödüllendirilir. Ödüller, annelerin siparişlerinden finanse edilir.",
-  "12": "Parayı çekebilmek için ablalar, kimlik ve adres doğrulamayı içeren tek seferlik bir kişisel kontrolünü tamamlarlar.",
+  "12": "Parayı çekebilmek için ablalar, kimlik ve adres doğrulamayı kapsayan tek seferlik bir kişisel veri kontrolünü tamamlarlar.",
   "13": "5. İstatistikleri göster",
-  "14": "Purrma, anneleri ve ablaları faaliyetlerine göre karma ile ödüllendirir. Karma liderler tahtasındaki sıralarını hesaplamak için kullanılır.",
-  "15": "İlçe, il ve ülke lider anneler sırasıyla Kontes, Prenses ve Kraliçe unvanlarını alır ve seçtikleri bölgenin üzerinde gösterilir.",
-  "16": "Ayrıca, sene sonunda en çok kedi kurtaran anneler sürpriz hediyelerle ödüllendirilir."
+  "14": "Purrma, anneleri ve ablaları faaliyetlerine göre karma ile ödüllendirir. Karma, liderler tahtasındaki sıralarını hesaplamak için kullanılır.",
+  "15": "İlçe, il ve ülke lider anneler sırasıyla Kontes, Prenses ve Kraliçe ünvanlarını alır ve seçtikleri bölgenin üzerinde gösterilir.",
+  "16": "Ayrıca, sene sonunda açlıktan en çok kedi kurtaran anneler sürpriz hediyelerle ödüllendirilir."
 }
