--- a/locales/Roadmap/tr.json
+++ b/locales/Roadmap/tr.json
@@ -4,8 +4,10 @@
   "2": "ABD'de lansman",
   "3": "Canada'da lansman",
   "4": "EMEA'da lansman",
+  "5": "2. Aşamaya geçiş",
   "date1": "Tem 23",
   "date2": "Ağu 23",
   "date3": "Eyl 23",
-  "date4": "Eyl 23"
+  "date4": "Eyl 23",
+  "date5": "Oca 24"
 }
