--- a/locales/Project/tr.json
+++ b/locales/Project/tr.json
@@ -2,7 +2,7 @@
   "0": "Platform",
   "1": "1. Sipariş ver",
   "2": "Anneler, kedileri doyurmak için sipariş verirler.",
-  "3": "Mama türünü, miktarını ve bu mamaları hangi kedilere, sokak, sahiplenilen, veya tümüne, verileceğine dair karar verirler.",
+  "3": "Mama türünü, miktarını ve bu mamaların hangi kedilere, sokak, sahiplenilen, veya tümüne, verileceğine dair karar verirler.",
   "4": "2. Mamayı dağıt",
   "5": "Ablalar, annelerin sipariş ettiği mamaları onların adından kedilere verirler. Doyurma süreçlerini kaydederler ve kalite kontrolü için platforma yüklerler.",
   "6": "Kontrol olumlu sonuçlanırsa ablaya annenin siparişinden ödeme yapılır, aksi takdirde ablanın doyurmayı tekrar yapması gerekir.",
