--- a/locales/Roadmap/en.json
+++ b/locales/Roadmap/en.json
@@ -1,9 +1,9 @@
 {
   "0": "The roadmap",
   "1": "Launch in TR",
-  "2": "Launch in US",
-  "3": "Launch in CA",
-  "4": "Launch in EMEA",
+  "2": "Growth in TR",
+  "3": "Launch in US & CA",
+  "4": "Launch in EU",
   "5": "Proceed with stage 2",
   "date1": "Jul 23",
   "date2": "Aug 23",
