--- a/locales/Roadmap/tr.json
+++ b/locales/Roadmap/tr.json
@@ -1,9 +1,9 @@
 {
   "0": "Planlar",
   "1": "Türkiye'de lansman",
-  "2": "ABD'de lansman",
-  "3": "Canada'da lansman",
-  "4": "EMEA'da lansman",
+  "2": "Türkiye'de büyümek",
+  "3": "ABD ve Canada'da lansman",
+  "4": "AB'de lansman",
   "5": "2. Aşamaya geçiş",
   "date1": "Tem 23",
   "date2": "Ağu 23",
